updated krr to not have to recompute the kernel each time we want to test diff lambdas

--- a/KRR_and_KLR.ipynb
+++ b/KRR_and_KLR.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 119,
    "id": "utility-italian",
    "metadata": {},
    "outputs": [],
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "sound-pattern",
+   "id": "competent-necklace",
    "metadata": {},
    "source": [
     "# Load the data"
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "opening-chosen",
+   "id": "previous-acoustic",
    "metadata": {},
    "source": [
     "For $k = 0, 1, 2$ we have the following files:\n",
@@ -31,8 +31,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
-   "id": "given-proxy",
+   "execution_count": null,
+   "id": "still-scheme",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,28 +48,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
-   "id": "running-alert",
+   "execution_count": null,
+   "id": "intelligent-surveillance",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(2000, 100)"
-      ]
-     },
-     "execution_count": 58,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "Xtr0_mat100.shape"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "popular-impossible",
+   "id": "united-blame",
    "metadata": {},
    "source": [
     "# Implementing some kernels"
@@ -77,7 +66,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "featured-nature",
+   "id": "advance-ecuador",
    "metadata": {},
    "source": [
     "## Gaussian Kernel"
@@ -85,8 +74,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
-   "id": "bottom-yukon",
+   "execution_count": null,
+   "id": "convertible-elements",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -109,7 +98,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "sunset-yemen",
+   "id": "certain-monitor",
    "metadata": {},
    "source": [
     "## Polynomial Kernel"
@@ -118,14 +107,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "capable-harbor",
+   "id": "located-reservation",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "recognized-attachment",
+   "id": "seasonal-reach",
    "metadata": {},
    "source": [
     "## Kernel Ridge Regression"
@@ -133,7 +122,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "piano-rough",
+   "id": "coordinated-aviation",
    "metadata": {},
    "source": [
     "* Consider RKHS $\\mathcal H$, associated to a p.d. kernel K on $\\mathcal X$\n",
@@ -154,22 +143,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
-   "id": "biological-demand",
+   "execution_count": null,
+   "id": "middle-student",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def KRR(X, y, lambd, kernel = \"gaussian\", sigma=0.5 ):\n",
+    "def KRR(K, y, lambd):\n",
     "    \"\"\"\n",
-    "    make lambd a list so we can test multiple regularisations without having to compute the kernel multiple times\n",
-    "    returns the predictions for each value of lambd\n",
+    "    takes the kernel matrix as an input and computes the MSE and the predictions for each value in lambd (list)\n",
     "    \"\"\"\n",
-    "    assert X.shape[0] == y.shape[0]\n",
+    "    assert K.shape[0] == y.shape[0]\n",
     "    assert len(lambd) > 0\n",
     "    \n",
-    "    # Compute the kernel matrix for our data\n",
-    "    if kernel==\"gaussian\":\n",
-    "        K = gaussian_kernel(X, sigma)\n",
     "    y_preds = []\n",
     "    loss = []\n",
     "    for l in lambd:\n",
@@ -178,7 +163,7 @@
     "        alpha = np.linalg.solve((K + l*n*np.eye(n)), y)\n",
     "        # predict\n",
     "        loss_lambda = MSE(y, l, alpha, K)\n",
-    "        print(f\"The MSE for the chosen parameters (lambda = {l:.2f} and sigma = {sigma:.2f}) is : {loss_lambda:.4f}\")\n",
+    "        print(f\"The MSE for lambda = {l:.2f} is : {loss_lambda:.4f}\")\n",
     "        y_preds += [K @ alpha]\n",
     "        loss += [loss_lambda]\n",
     "    return(y_preds, loss)\n",
@@ -187,8 +172,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
-   "id": "wound-grain",
+   "execution_count": null,
+   "id": "instructional-stake",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -201,77 +186,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
-   "id": "gorgeous-switzerland",
-   "metadata": {},
+   "execution_count": null,
+   "id": "academic-magazine",
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [],
+   "source": [
+    "K_tr0 = gaussian_kernel(Xtr0_mat100,0.5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 120,
+   "id": "computational-bouquet",
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The MSE for the chosen parameters (lambda = 0.00 and sigma = 0.50) is : 998.5560\n",
-      "The MSE for the chosen parameters (lambda = 0.10 and sigma = 0.50) is : 503.3328\n",
-      "The MSE for the chosen parameters (lambda = 0.20 and sigma = 0.50) is : 512.7811\n",
-      "The MSE for the chosen parameters (lambda = 0.30 and sigma = 0.50) is : 525.0479\n",
-      "The MSE for the chosen parameters (lambda = 0.40 and sigma = 0.50) is : 538.6433\n",
-      "The MSE for the chosen parameters (lambda = 0.50 and sigma = 0.50) is : 552.7041\n",
-      "The MSE for the chosen parameters (lambda = 1.00 and sigma = 0.50) is : 618.3160\n",
-      "The MSE for the chosen parameters (lambda = 1.50 and sigma = 0.50) is : 669.7054\n",
-      "The MSE for the chosen parameters (lambda = 2.00 and sigma = 0.50) is : 708.8776\n",
-      "The MSE for the chosen parameters (lambda = 2.50 and sigma = 0.50) is : 739.2341\n",
-      "The MSE for the chosen parameters (lambda = 3.00 and sigma = 0.50) is : 763.2896\n"
+      "The MSE for lambda = 0.00 is : 998.5560\n",
+      "The MSE for lambda = 0.01 is : 499.4957\n",
+      "The MSE for lambda = 0.02 is : 499.5742\n",
+      "The MSE for lambda = 0.03 is : 499.8317\n",
+      "The MSE for lambda = 0.04 is : 500.1999\n",
+      "The MSE for lambda = 0.06 is : 500.6640\n",
+      "The MSE for lambda = 0.07 is : 501.2154\n",
+      "The MSE for lambda = 0.08 is : 501.8478\n",
+      "The MSE for lambda = 0.09 is : 502.5553\n",
+      "The MSE for lambda = 0.10 is : 503.3328\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "([array([-1.01863407e-10,  9.99999999e-01,  1.00000000e+00, ...,\n",
-       "         -2.18278728e-10, -5.96628524e-10, -2.32830644e-10]),\n",
-       "  array([0.43943344, 0.4340629 , 0.4323965 , ..., 0.43665257, 0.43673756,\n",
-       "         0.43516752]),\n",
-       "  array([0.40155027, 0.39691609, 0.39560559, ..., 0.39893663, 0.39962271,\n",
-       "         0.39869787]),\n",
-       "  array([0.36985701, 0.36567165, 0.3645303 , ..., 0.36742687, 0.36824697,\n",
-       "         0.36755341]),\n",
-       "  array([0.34283881, 0.33899753, 0.33797011, ..., 0.34057553, 0.34142318,\n",
-       "         0.34085396]),\n",
-       "  array([0.31951253, 0.31595399, 0.3150136 , ..., 0.31739725, 0.3182362 ,\n",
-       "         0.317747  ]),\n",
-       "  array([0.23844113, 0.23581735, 0.23514116, ..., 0.23685358, 0.23755287,\n",
-       "         0.23724959]),\n",
-       "  array([0.19019411, 0.18810968, 0.18757713, ..., 0.18892539, 0.18950268,\n",
-       "         0.18927723]),\n",
-       "  array([0.15818779, 0.15645765, 0.15601755, ..., 0.15713157, 0.15761983,\n",
-       "         0.15743917]),\n",
-       "  array([0.1354025 , 0.13392336, 0.13354812, ..., 0.1344979 , 0.13492   ,\n",
-       "         0.13476888]),\n",
-       "  array([0.11835492, 0.11706306, 0.11673591, ..., 0.11756392, 0.1179353 ,\n",
-       "         0.11780526])],\n",
-       " [998.5560000024693,\n",
-       "  503.3328038166729,\n",
-       "  512.781088059742,\n",
-       "  525.0479016266605,\n",
-       "  538.6432926205351,\n",
-       "  552.7040739403902,\n",
-       "  618.315974168215,\n",
-       "  669.7053995758099,\n",
-       "  708.8776419738957,\n",
-       "  739.2340649936118,\n",
-       "  763.2895583095976])"
-      ]
-     },
-     "execution_count": 110,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
-    "KRR(Xtr0_mat100, Ytr0[:,1], [0, 0.1, 0.2,0.3,0.4, 0.5,1,1.5,2,2.5,3], sigma = 0.5)"
+    "lambdas = np.linspace(0,0.1,10)\n",
+    "pred_tr0, loss_tr0 = KRR(K_tr0, Ytr0[:,1], lambdas)"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "crucial-twenty",
+   "id": "heard-antique",
    "metadata": {},
    "source": [
     "## Kernel Logistic Regression"
@@ -279,7 +236,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "broad-creator",
+   "id": "industrial-details",
    "metadata": {},
    "source": [
     "- Binary Classificaiton setup: $\\mathcal Y = \\{-1, 1\\}$\n",
@@ -291,7 +248,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "under-conflict",
+   "id": "tight-reminder",
    "metadata": {},
    "outputs": [],
    "source": []
