Comments on SVM before implementation

--- a/KRR_and_KLR.ipynb
+++ b/KRR_and_KLR.ipynb
@@ -2,8 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 179,
-   "id": "utility-italian",
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +11,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "through-indicator",
    "metadata": {},
    "source": [
     "# Load the data"
@@ -20,7 +18,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "detailed-perspective",
    "metadata": {},
    "source": [
     "For $k = 0, 1, 2$ we have the following files:\n",
@@ -31,8 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 281,
-   "id": "straight-april",
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,8 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 282,
-   "id": "juvenile-facial",
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -62,7 +57,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bearing-religion",
    "metadata": {},
    "source": [
     "# Implementing some kernels"
@@ -70,7 +64,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "revised-underwear",
    "metadata": {},
    "source": [
     "## Linear Kernel"
@@ -79,7 +72,6 @@
   {
    "cell_type": "code",
    "execution_count": 283,
-   "id": "alike-terminal",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -89,7 +81,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "american-postcard",
    "metadata": {},
    "source": [
     "## Gaussian Kernel"
@@ -98,7 +89,6 @@
   {
    "cell_type": "code",
    "execution_count": 284,
-   "id": "original-happiness",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -121,7 +111,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "compressed-basics",
    "metadata": {},
    "source": [
     "## Polynomial Kernel"
@@ -130,14 +119,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "atmospheric-radar",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "choice-charleston",
    "metadata": {},
    "source": [
     "## Kernel Ridge Regression"
@@ -145,7 +132,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "limiting-burning",
    "metadata": {},
    "source": [
     "* Consider RKHS $\\mathcal H$, associated to a p.d. kernel K on $\\mathcal X$\n",
@@ -166,8 +152,20 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 286,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def MSE(K, y, lambd, alpha):\n",
+    "    n = y.shape[0]\n",
+    "    data_term = (np.linalg.norm(np.dot(K, alpha.reshape(-1,1)) - y)**2)/n\n",
+    "    reg_term = alpha @ K @ alpha\n",
+    "    return(data_term + lambd * reg_term)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 300,
-   "id": "entertaining-grounds",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -217,22 +215,7 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 286,
-   "id": "limiting-general",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def MSE(K, y, lambd, alpha):\n",
-    "    n = y.shape[0]\n",
-    "    data_term = (np.linalg.norm(np.dot(K, alpha.reshape(-1,1)) - y)**2)/n\n",
-    "    reg_term = alpha @ K @ alpha\n",
-    "    return(data_term + lambd * reg_term)"
-   ]
-  },
-  {
    "cell_type": "markdown",
-   "id": "speaking-interpretation",
    "metadata": {},
    "source": [
     "## Kernel Logistic Regression"
@@ -240,7 +223,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "hidden-argument",
    "metadata": {},
    "source": [
     "- Binary Classificaiton setup: $\\mathcal Y = \\{-1, 1\\}$\n",
@@ -297,7 +279,6 @@
   {
    "cell_type": "code",
    "execution_count": 287,
-   "id": "backed-earthquake",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -317,7 +298,6 @@
   {
    "cell_type": "code",
    "execution_count": 288,
-   "id": "level-queue",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -334,7 +314,6 @@
   {
    "cell_type": "code",
    "execution_count": 295,
-   "id": "greatest-earthquake",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -393,7 +372,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "consolidated-rolling",
    "metadata": {},
    "source": [
     "# Testing the accuracy"
@@ -401,7 +379,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "local-cornell",
    "metadata": {},
    "source": [
     "## Splitting data"
@@ -410,7 +387,6 @@
   {
    "cell_type": "code",
    "execution_count": 303,
-   "id": "preceding-allowance",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -423,7 +399,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "simple-principal",
    "metadata": {},
    "source": [
     "## Create the kernel matrices"
@@ -432,7 +407,6 @@
   {
    "cell_type": "code",
    "execution_count": 304,
-   "id": "broken-defense",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -447,7 +421,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "healthy-abraham",
    "metadata": {},
    "source": [
     "## Testing KRR"
@@ -456,7 +429,6 @@
   {
    "cell_type": "code",
    "execution_count": 305,
-   "id": "featured-endorsement",
    "metadata": {
     "scrolled": false
    },
@@ -593,17 +565,16 @@
    ],
    "source": [
     "lambdas = [0] + [10**i for i in range(-10,2)]\n",
-    "print(\"*************KRR for dataset 0*************\\n\")\n",
+    "print(\"************* KRR for dataset 0 *************\\n\")\n",
     "alphas_tr0, loss_tr0, acc_0, loss_val0, acc_val0 = KRR(K_tr0, ytr0[:,1], K_val0, yval0[:,1], lambdas)\n",
-    "print(\"*************KRR for dataset 1*************\\n\")\n",
+    "print(\"************* KRR for dataset 1 *************\\n\")\n",
     "alphas_tr1, loss_tr1, acc_1, loss_val1, acc_val1 = KRR(K_tr1, ytr1[:,1], K_val1, yval1[:,1],lambdas)\n",
-    "print(\"*************KRR for dataset 2*************\\n\")\n",
+    "print(\"************* KRR for dataset 2 *************\\n\")\n",
     "alphas_tr2, loss_tr2, acc_2, loss_val2, acc_val2 = KRR(K_tr2, ytr2[:,1], K_val2, yval2[:,1],lambdas)"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "original-houston",
    "metadata": {},
    "source": [
     "## Testing KLR"
@@ -612,7 +583,6 @@
   {
    "cell_type": "code",
    "execution_count": 267,
-   "id": "suspended-waterproof",
    "metadata": {
     "scrolled": false
    },
@@ -678,7 +648,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ideal-power",
    "metadata": {},
    "source": [
     "## Making predictions"
@@ -686,7 +655,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "wired-fundamental",
    "metadata": {},
    "source": [
     "### First create the kernels for each testing set with the chosen parameters"
@@ -695,7 +663,6 @@
   {
    "cell_type": "code",
    "execution_count": 292,
-   "id": "diagnostic-limit",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -707,7 +674,6 @@
   {
    "cell_type": "code",
    "execution_count": 293,
-   "id": "animated-mongolia",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -719,7 +685,6 @@
   {
    "cell_type": "code",
    "execution_count": 319,
-   "id": "outer-employment",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -743,7 +708,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "welcome-implementation",
    "metadata": {},
    "source": [
     "Example"
@@ -752,7 +716,6 @@
   {
    "cell_type": "code",
    "execution_count": 320,
-   "id": "rapid-librarian",
    "metadata": {
     "scrolled": true
    },
@@ -776,7 +739,100 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "impressive-timber",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Support Vector Machine approach (SVM)\n",
+    "\n",
+    "- Binary Classificaiton setup: $\\mathcal Y = \\{-1, 1\\}$\n",
+    "- $\\mathcal l_{\\text{hinge}}(f(x),y) = \\max(1- y f(x), 0)$\n",
+    "\n",
+    "Objective:\n",
+    "\\begin{align*}\n",
+    "\\hat f &= \\text{argmin}_{f\\in \\mathcal H} \\frac{1}{n} \\sum_{i=1}^n \\max(1- y_i f(x_i), 0) + \\lambda||f||^2_{\\mathcal H}\\\\\n",
+    "\\alpha &= \\text{argmin}_{\\alpha \\in \\mathbb R^n} \\frac{1}{n} \\sum_{i=1}^n \\max(y_i[K\\alpha]_i, 0) + \\lambda \\alpha^T K \\alpha\n",
+    "\\end{align*}\n",
+    "\n",
+    "It is a convex optimization problem but the objective is not smooth.\n",
+    "\n",
+    "By introducing additional slack variables $\\xi_i$, the problem's objective becomes smooth but it is not the case for the constraints anymore. Let us solve the dual formulation instead (which is sparse, leading to faster algorithms). \n",
+    "\n",
+    "The dual is given by : \n",
+    "\n",
+    "\\begin{align*}\n",
+    "\\max_{0\\leq\\mu\\leq \\frac{1}{n}} \\mu^T 1 - \\frac{1}{4\\lambda} \\mu^T diag(y) K diag(y)\\mu\n",
+    "\\end{align*}\n",
+    "\n",
+    "\n",
+    "We will solve it using CVXOpt tools"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def hinge_loss(u):\n",
+    "    return np.maximum(1-u, 0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0.66666667, 0.66666667, 0.66666667, 0.66666667])"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "hinge_loss(1/3*np.ones(4))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": []
@@ -798,7 +854,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.1"
+   "version": "3.8.3"
   }
  },
  "nbformat": 4,
