Implementing SVM + detection of an eventual error in the writting predictions function

--- a/KRR_and_KLR.ipynb
+++ b/KRR_and_KLR.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 283,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -88,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 284,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -152,7 +152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 286,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -386,7 +386,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 303,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -406,7 +406,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 304,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -662,7 +662,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 292,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -673,7 +673,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 293,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -688,20 +688,22 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def write_predictions_csv(test_kernels, test_alphas):\n",
+    "def write_predictions_csv(test_kernels, test_alphas, path=\"data/Ytest_KRR.csv\"):\n",
     "    \n",
     "    predictions = np.zeros((3000,2), dtype=int)\n",
     "    predictions[:,0] = np.arange(0,3000)\n",
     "    \n",
     "    for i in range(3):\n",
-    "        y_pred = test_kernels[0] @ test_alphas[0]\n",
+    "        y_pred = test_kernels[0] @ test_alphas[0] ##### ICI ERREUR JE PENSE\n",
+    "                                                ##### test_kernels[i] @ test_alphas[i] \n",
+    "                                                ### plutot non ??\n",
     "        y_pred[y_pred >= 0.5] = 1\n",
     "        y_pred[y_pred < 0.5] = 0\n",
     "        \n",
     "        predictions[1000*i:1000*(i+1), 1] = y_pred\n",
     "    predictions = predictions.astype(int)\n",
     "    print(\"saving predictions\")\n",
-    "    np.savetxt(\"data/Ytest_KRR.csv\", predictions, header = \"Id, Bound\", delimiter =\",\")\n",
+    "    np.savetxt(path, predictions, header = \"Id, Bound\", delimiter =\",\")\n",
     "    print(\"saved predictions\")\n",
     "        "
    ]
@@ -790,10 +792,11 @@
     "\n",
     "By introducing additional slack variables $\\xi_i$, the problem's objective becomes smooth but it is not the case for the constraints anymore. Let us solve the dual formulation instead (which is sparse, leading to faster algorithms). \n",
     "\n",
-    "The dual is given by : \n",
+    "The dual can be rewritten as a quadratic minimization under box constraints : \n",
     "\n",
     "\\begin{align*}\n",
-    "\\max_{0\\leq\\mu\\leq \\frac{1}{n}} \\mu^T 1 - \\frac{1}{4\\lambda} \\mu^T diag(y) K diag(y)\\mu\n",
+    "\\min_{\\alpha \\in \\mathbb R^n} \\frac{1}{2} \\alpha^TK\\alpha - \\alpha^T y\\\\\n",
+    "\\text{s.t. }  0\\leq y_i\\alpha_i\\leq \\frac{1}{2\\lambda n}\n",
     "\\end{align*}\n",
     "\n",
     "\n",
@@ -802,32 +805,307 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def hinge_loss(u):\n",
-    "    return np.maximum(1-u, 0)"
+    "def hinge_loss(y_true, y_pred):\n",
+    "    n = y_true.shape[0]\n",
+    "    term = np.maximum(1-y_true*y_pred, 0)\n",
+    "    return(np.sum(term)/n)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 57,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## Je pense qu'une plus belle façon de faire serait de créer des fonctions de \n",
+    "## kernel(X, sigma) et de les appeler avec en paramètres (X_train ou X_val) selon si on \n",
+    "## fait le training ou la validation, pour pas avoir à garder en mémoire les kernels train/val\n",
+    "## comme on le fait jusqu'à maintenant\n",
+    "## Mais bon, là il est 2h47 du matin, j'ai un peu la flemme et j'imagine que toi aussi,\n",
+    "## ça marche déjà bien comme ça ^^\n",
+    "\n",
+    "def _gaussian_kernel(sigma=1):\n",
+    "    \"\"\"\n",
+    "    Prepares a Gaussian RBF kernel using the provided sigma.\n",
+    "\n",
+    "    Returns:\n",
+    "    --------\n",
+    "    kernel_function: A callable to the Gaussian RBF kernel function.\n",
+    "\n",
+    "    \"\"\"\n",
+    "    gamma = -1 / (2 * sigma ** 2)\n",
+    "    kernel_function = lambda X, y: np.exp(gamma * np.square(X[:, np.newaxis] - y).sum(axis=2))\n",
+    "    return kernel_function"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from cvxopt import matrix, solvers\n",
+    "\n",
+    "def SVM(K, y, K_val, y_val, lambd):\n",
+    "    # initialize the values\n",
+    "    assert K.shape[0] == y.shape[0]\n",
+    "    n = K.shape[0]\n",
+    "    \n",
+    "    y_preds, y_preds_val = [], []\n",
+    "    losses, losses_val = [], []\n",
+    "    accuracies, accuracies_val = [], []\n",
+    "    alphas = []\n",
+    "    \n",
+    "    \n",
+    "    for l in lambd :\n",
+    "\n",
+    "            ## Solving dual using CVXOpt\n",
+    "        P = matrix(K)\n",
+    "        q = matrix(-y)\n",
+    "        D = np.diag(-y)\n",
+    "        G = matrix(np.vstack((D,-D)))\n",
+    "        h = matrix(np.concatenate((np.zeros(n), 1/(2*l) * np.ones(n)), axis=0))\n",
+    "        solvers.options['show_progress'] = False\n",
+    "        sol=solvers.qp(P, q, G, h)\n",
+    "        alpha = sol['x']\n",
+    "        alpha = np.reshape(alpha,-1)               \n",
+    "\n",
+    "            ## predictions\n",
+    "        # training\n",
+    "        pred_l = K @alpha\n",
+    "        y_preds += [pred_l]\n",
+    "        loss_l = hinge_loss(y, pred_l)\n",
+    "        acc_l = accuracy(y, pred_l)\n",
+    "\n",
+    "        \n",
+    "        # validation\n",
+    "        pred_l_val = K_val@alpha\n",
+    "        y_preds_val += [pred_l_val]\n",
+    "        loss_l_val = hinge_loss(y_val, pred_l_val)\n",
+    "        acc_l_val = accuracy(y_val,pred_l_val)\n",
+    "        \n",
+    "\n",
+    "        print(15*\"-\", f\" lambda = {l} \", 15*\"-\")\n",
+    "        print(f\"Training: loss = {loss_l:.4f}, accuracy = {acc_l:.6f}\")\n",
+    "        print(f\"Validation: loss = {loss_l_val:.4f}, accuracy = {acc_l_val:.6f}\")\n",
+    "        \n",
+    "        losses += [loss_l]\n",
+    "        accuracies += [acc_l]\n",
+    "        \n",
+    "        losses_val += [loss_l_val]\n",
+    "        accuracies_val += [acc_l_val]\n",
+    "    \n",
+    "        alphas +=[alpha] \n",
+    "        \n",
+    "    return(alphas, losses, accuracies, losses_val, accuracies_val)\n",
+    "            "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "array([0.66666667, 0.66666667, 0.66666667, 0.66666667])"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "************* SVM for dataset 0 *************\n",
+      "\n",
+      "---------------  lambda = 1e-10  ---------------\n",
+      "Training: loss = 0.5350, accuracy = 1.000000\n",
+      "Validation: loss = 678.4697, accuracy = 0.477000\n",
+      "---------------  lambda = 1e-09  ---------------\n",
+      "Training: loss = 0.5350, accuracy = 1.000000\n",
+      "Validation: loss = 678.5860, accuracy = 0.477000\n",
+      "---------------  lambda = 1e-08  ---------------\n",
+      "Training: loss = 0.5350, accuracy = 1.000000\n",
+      "Validation: loss = 678.6568, accuracy = 0.477000\n",
+      "---------------  lambda = 1e-07  ---------------\n",
+      "Training: loss = 0.5350, accuracy = 1.000000\n",
+      "Validation: loss = 678.5269, accuracy = 0.477000\n",
+      "---------------  lambda = 1e-06  ---------------\n",
+      "Training: loss = 0.5350, accuracy = 1.000000\n",
+      "Validation: loss = 678.6154, accuracy = 0.477000\n",
+      "---------------  lambda = 1e-05  ---------------\n",
+      "Training: loss = 0.5357, accuracy = 1.000000\n",
+      "Validation: loss = 499.1170, accuracy = 0.476000\n",
+      "---------------  lambda = 0.0001  ---------------\n",
+      "Training: loss = 0.6951, accuracy = 0.867000\n",
+      "Validation: loss = 9.3091, accuracy = 0.503000\n",
+      "---------------  lambda = 0.001  ---------------\n",
+      "Training: loss = 0.9603, accuracy = 0.535000\n",
+      "Validation: loss = 0.6275, accuracy = 0.501000\n",
+      "---------------  lambda = 0.01  ---------------\n",
+      "Training: loss = 0.9960, accuracy = 0.535000\n",
+      "Validation: loss = 0.5182, accuracy = 0.504000\n",
+      "---------------  lambda = 0.1  ---------------\n",
+      "Training: loss = 0.9996, accuracy = 0.535000\n",
+      "Validation: loss = 0.5233, accuracy = 0.504000\n",
+      "---------------  lambda = 1  ---------------\n",
+      "Training: loss = 1.0000, accuracy = 0.535000\n",
+      "Validation: loss = 0.9298, accuracy = 0.503000\n",
+      "---------------  lambda = 10  ---------------\n",
+      "Training: loss = 1.0000, accuracy = 0.535000\n",
+      "Validation: loss = 0.9930, accuracy = 0.503000\n",
+      "\n",
+      "\n",
+      "************* SVM for dataset 1 *************\n",
+      "\n",
+      "---------------  lambda = 1e-10  ---------------\n",
+      "Training: loss = 0.5090, accuracy = 1.000000\n",
+      "Validation: loss = 733.5766, accuracy = 0.461000\n",
+      "---------------  lambda = 1e-09  ---------------\n",
+      "Training: loss = 0.5090, accuracy = 1.000000\n",
+      "Validation: loss = 733.5863, accuracy = 0.461000\n",
+      "---------------  lambda = 1e-08  ---------------\n",
+      "Training: loss = 0.5090, accuracy = 1.000000\n",
+      "Validation: loss = 733.5815, accuracy = 0.461000\n",
+      "---------------  lambda = 1e-07  ---------------\n",
+      "Training: loss = 0.5090, accuracy = 1.000000\n",
+      "Validation: loss = 733.5736, accuracy = 0.461000\n",
+      "---------------  lambda = 1e-06  ---------------\n",
+      "Training: loss = 0.5090, accuracy = 1.000000\n",
+      "Validation: loss = 733.5889, accuracy = 0.461000\n",
+      "---------------  lambda = 1e-05  ---------------\n",
+      "Training: loss = 0.5090, accuracy = 1.000000\n",
+      "Validation: loss = 737.7790, accuracy = 0.463000\n",
+      "---------------  lambda = 0.0001  ---------------\n",
+      "Training: loss = 0.6902, accuracy = 0.839000\n",
+      "Validation: loss = 244.2715, accuracy = 0.461000\n",
+      "---------------  lambda = 0.001  ---------------\n",
+      "Training: loss = 0.9573, accuracy = 0.514000\n",
+      "Validation: loss = 7.1123, accuracy = 0.521000\n",
+      "---------------  lambda = 0.01  ---------------\n",
+      "Training: loss = 0.9957, accuracy = 0.509000\n",
+      "Validation: loss = 1.3479, accuracy = 0.522000\n",
+      "---------------  lambda = 0.1  ---------------\n",
+      "Training: loss = 0.9996, accuracy = 0.509000\n",
+      "Validation: loss = 0.9338, accuracy = 0.463000\n",
+      "---------------  lambda = 1  ---------------\n",
+      "Training: loss = 1.0000, accuracy = 0.509000\n",
+      "Validation: loss = 0.9928, accuracy = 0.490000\n",
+      "---------------  lambda = 10  ---------------\n",
+      "Training: loss = 1.0000, accuracy = 0.509000\n",
+      "Validation: loss = 0.9993, accuracy = 0.490000\n",
+      "\n",
+      "\n",
+      "************* SVM for dataset 2 *************\n",
+      "\n",
+      "---------------  lambda = 1e-10  ---------------\n",
+      "Training: loss = 0.4990, accuracy = 1.000000\n",
+      "Validation: loss = 96.1511, accuracy = 0.492000\n",
+      "---------------  lambda = 1e-09  ---------------\n",
+      "Training: loss = 0.4990, accuracy = 1.000000\n",
+      "Validation: loss = 96.1606, accuracy = 0.492000\n",
+      "---------------  lambda = 1e-08  ---------------\n",
+      "Training: loss = 0.4990, accuracy = 1.000000\n",
+      "Validation: loss = 96.1453, accuracy = 0.492000\n",
+      "---------------  lambda = 1e-07  ---------------\n",
+      "Training: loss = 0.4990, accuracy = 1.000000\n",
+      "Validation: loss = 96.1624, accuracy = 0.492000\n",
+      "---------------  lambda = 1e-06  ---------------\n",
+      "Training: loss = 0.4990, accuracy = 1.000000\n",
+      "Validation: loss = 96.2180, accuracy = 0.492000\n",
+      "---------------  lambda = 1e-05  ---------------\n",
+      "Training: loss = 0.4990, accuracy = 1.000000\n",
+      "Validation: loss = 96.1552, accuracy = 0.492000\n",
+      "---------------  lambda = 0.0001  ---------------\n",
+      "Training: loss = 0.6266, accuracy = 0.904000\n",
+      "Validation: loss = 3.0030, accuracy = 0.490000\n",
+      "---------------  lambda = 0.001  ---------------\n",
+      "Training: loss = 0.9349, accuracy = 0.503000\n",
+      "Validation: loss = 0.5783, accuracy = 0.494000\n",
+      "---------------  lambda = 0.01  ---------------\n",
+      "Training: loss = 0.9935, accuracy = 0.499000\n",
+      "Validation: loss = 0.5132, accuracy = 0.494000\n",
+      "---------------  lambda = 0.1  ---------------\n",
+      "Training: loss = 0.9993, accuracy = 0.499000\n",
+      "Validation: loss = 0.5208, accuracy = 0.488000\n",
+      "---------------  lambda = 1  ---------------\n",
+      "Training: loss = 0.9999, accuracy = 0.499000\n",
+      "Validation: loss = 0.9006, accuracy = 0.504000\n",
+      "---------------  lambda = 10  ---------------\n",
+      "Training: loss = 1.0000, accuracy = 0.499000\n",
+      "Validation: loss = 0.9901, accuracy = 0.504000\n"
+     ]
     }
    ],
    "source": [
-    "hinge_loss(1/3*np.ones(4))"
+    "lambdas = [10**i for i in range(-10,2)]\n",
+    "print(\"************* SVM for dataset 0 *************\\n\")\n",
+    "alphas_tr0, loss_tr0, acc_0, loss_val0, acc_val0 = SVM(K_tr0, ytr0[:,1], K_val0, yval0[:,1], lambdas)\n",
+    "\n",
+    "print(\"\")\n",
+    "print(\"\")\n",
+    "print(\"************* SVM for dataset 1 *************\\n\")\n",
+    "alphas_tr1, loss_tr1, acc_1, loss_val1, acc_val1 = SVM(K_tr1, ytr1[:,1], K_val1, yval1[:,1],lambdas)\n",
+    "\n",
+    "print(\"\")\n",
+    "print(\"\")\n",
+    "print(\"************* SVM for dataset 2 *************\\n\")\n",
+    "alphas_tr2, loss_tr2, acc_2, loss_val2, acc_val2 = SVM(K_tr2, ytr2[:,1], K_val2, yval2[:,1],lambdas)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 73,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def write_predictions_csv(test_kernels, test_alphas, path=\"data/Ytest_KRR.csv\"):\n",
+    "    \n",
+    "    predictions = np.zeros((3000,2), dtype=int)\n",
+    "    predictions[:,0] = np.arange(0,3000)\n",
+    "    \n",
+    "    for i in range(3):\n",
+    "        y_pred = test_kernels[i] @ test_alphas[i] ##### ICI ERREUR JE PENSE\n",
+    "                                                ##### test_kernels[i] @ test_alphas[i] \n",
+    "                                                ### plutot non ??\n",
+    "        y_pred[y_pred >= 0.5] = 1\n",
+    "        y_pred[y_pred < 0.5] = 0\n",
+    "        \n",
+    "        predictions[1000*i:1000*(i+1), 1] = y_pred\n",
+    "    predictions = predictions.astype(int)\n",
+    "    print(\"saving predictions\")\n",
+    "    np.savetxt(path, predictions, header = \"Id, Bound\", delimiter =\",\")\n",
+    "    print(\"saved predictions\")\n",
+    "        "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 77,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "saving predictions\n",
+      "saved predictions\n"
+     ]
+    }
+   ],
+   "source": [
+    "## forecasting \n",
+    "\n",
+    "Xte0 = np.genfromtxt(\"data/Xte0_mat100.csv\", delimiter='')\n",
+    "Xte1 = np.genfromtxt(\"data/Xte1_mat100.csv\", delimiter='')\n",
+    "Xte2 = np.genfromtxt(\"data/Xte2_mat100.csv\", delimiter='')\n",
+    "\n",
+    "K_te0 = gaussian_kernel(Xte0,1)\n",
+    "K_te1 = gaussian_kernel(Xte1,1)\n",
+    "K_te2 = gaussian_kernel(Xte2,1)\n",
+    "\n",
+    "test_kernels = [K_te0, K_te1, K_te2]\n",
+    "test_alphas = [alphas_tr0[8], alphas_tr1[8], alphas_tr2[10]] # il faut choisir l'alpha associé à un bon lambda!\n",
+    "\n",
+    "write_predictions_csv(test_kernels, test_alphas, path=\"data/Ytest_SVM.csv\")"
    ]
   },
   {
@@ -840,9 +1118,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "optim",
    "language": "python",
-   "name": "python3"
+   "name": "optim"
   },
   "language_info": {
    "codemirror_mode": {
@@ -854,7 +1132,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
